--- a/gb/23/2/23/n13936731.md
+++ b/gb/23/2/23/n13936731.md
@@ -29,31 +29,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436585.md#1" target="_blank">李小刚：十年文革灾难性后果探究</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757209.md#1" target="_blank">共产暴政录：红四方面军在四川杀民众百万</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946889.md#1">【中国禁闻】杭州九岁儿发烧白肺被送进ICU</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947464.md#1">【新闻大家谈】傅希秋：让中共无立足之地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947534.md#1">【马克时空】 中共最忌惮美星链和便携式导弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946483.md#1">分析：习为何警告宁德时代勿孤军深入</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946586.md#1">中共窃F-22战机机密 抄袭美技术制造歼-20</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946079.md#1">北京流感病例暴增 发烧门诊大排长龙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946022.md#1">疑违反奥斯卡规定 杨紫琼急删争议帖文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945948.md#1">刘德华被《流水落花》换角 郑秀文曝背后原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947269.md#1">TWICE发行迷你12辑 透露成员关系亲密秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946900.md#1">陆男团偶像徐炳超消失半年 街头卖包子上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945930.md#1">依然怀念演员生活 黎姿首曝15年前息影原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945826.md#1">补充蛋白质 11种常见食物价格亲民又实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944906.md#1">典型毒亲事例之一：令孩子感到恐惧的虐待</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943988.md#1">快速摆脱身体不适 高剂量维生素C有助改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946374.md#1">心理学家阐述何谓“二手压力”？有何迹象？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/23/n13936731.htm">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></p><hr>
